# CLIService

./: .gitignore  CMakeLists.txt  CliService.md  README.md  build.bat  build.sh  buildExample.bat  clean.bat  clean.sh  configure.bat  configure.sh  configureCMake.bat  configureCMake.sh  configureExample.bat  configureExample.sh  runExample.bat  runExample.sh  runMac.sh  runTests.bat  runTests.sh  runWin.sh
cliService/: CMakeLists.txt
cliService/example/: CMakeLists.txt  UnixWinTerminal.cpp  main.cpp
cliService/example/commands/: AccessLevel.hpp  PotmeterGetCommand.hpp  RebootCommand.hpp  RgbLedSetCommand.hpp
cliService/example/commands/hw/: PotmeterGetCommand.hpp  RgbLedSetCommand.hpp  ToggleSwitchGetCommand.hpp
cliService/example/commands/system/: HeapStatsGetCommand.hpp  RebootCommand.hpp
cliService/example/io/: UnixWinCharIOStream.cpp  UnixWinCharIOStream.hpp
cliService/example/menuTree/: mixedMenuTree.hpp  staticMenuTree.hpp
cliService/example/terminal/: UnixWinTerminal.cpp  UnixWinTerminal.hpp
cliService/example/util/: util.hpp
cliService/lib/: CMakeLists.txt
cliService/lib/include/cliService/: ActionRequest.hpp
cliService/lib/include/cliService/cli/: ActionRequest.hpp  CLIMessages.hpp  CLIService.hpp  CLIServiceConfiguration.hpp  CLIState.hpp  CharIOStreamIf.hpp  CommandHistory.hpp  CommandRequest.hpp  HistoryNavigationRequest.hpp  InputParser.hpp  LoginRequest.hpp  RequestBase.hpp  TabCompletionRequest.hpp  TerminalIf.hpp  User.hpp
cliService/lib/include/cliService/io/: ActionRequest.hpp  LoginRequest.hpp
cliService/lib/include/cliService/parser/: CommandParser.hpp  InputHandler.hpp  InputParser.hpp
cliService/lib/include/cliService/path/: PathResolver.hpp
cliService/lib/include/cliService/requests/: ActionRequest.hpp  LoginRequest.hpp
cliService/lib/include/cliService/terminal/: TerminalIf.hpp
cliService/lib/include/cliService/tree/: CLIResponse.hpp  Command.hpp  CommandIf.hpp  CommandResponse.hpp  Directory.hpp  Node.hpp  NodeIf.hpp  Path.hpp  PathCompleter.hpp  PathResolver.hpp  Response.hpp
cliService/lib/src/: ActionRequest.cpp
cliService/lib/src/actionRequest/: ActionRequest.cpp
cliService/lib/src/cli/: ActionRequest.cpp  CLIService.cpp  CommandHistory.cpp  InputParser.cpp  LoginRequest.cpp  User.cpp
cliService/lib/src/io/: ActionRequest.cpp  LoginRequest.cpp
cliService/lib/src/parser/: CommandParser.cpp  InputHandler.cpp  InputParser.cpp
cliService/lib/src/parser/requests/: ActionRequest.cpp  LoginRequest.cpp
cliService/lib/src/path/: Path.cpp  PathResolver.cpp
cliService/lib/src/requests/: ActionRequest.cpp  LoginRequest.cpp
cliService/lib/src/tree/: Command.cpp  CommandIf.cpp  Directory.cpp  Node.cpp  NodeIf.cpp  Path.cpp  PathResolver.cpp
cliService/lib/src/user/: User.cpp
cliService/test/: CMakeLists.txt
cliService/test/mock/command/: CommandMock.hpp
cliService/test/mock/io/: CharIOStreamMock.cpp  CharIOStreamMock.hpp
cliService/test/mock/terminal/: TerminalMock.cpp  TerminalMock.hpp
cliService/test/mock/tree/: CommandMock.cpp  CommandMock.hpp
cliService/test/tests/cli/: ActionRequestTest.cpp  CLIServiceAdvancedTest.cpp  CLIServiceTest.cpp  CommandHistoryTest.cpp  InputParserTest.cpp  LoginRequestTest.cpp  TabCompletionTest.cpp
cliService/test/tests/parser/: CommandParserTest.cpp  InputHandlerTest.cpp  InputParserTest.cpp
cliService/test/tests/parser/requests/: ActionRequestTest.cpp  LoginRequestTest.cpp
cliService/test/tests/path/: PathResolverTest.cpp  PathTest.cpp
cliService/test/tests/requests/: ActionRequestTest.cpp  LoginRequestTest.cpp
cliService/test/tests/tree/: PathCompleterAdvancedTest.cpp  PathCompleterTest.cpp  PathResolverNavigationTest.cpp  PathResolverTest.cpp  PathTest.cpp  TreeTest.cpp
cliService/tests/: ActionRequestTest.cpp  CMakeLists.txt
cliService/tests/actionRequest/: ActionRequestTest.cpp
cliService/tests/io/: ActionRequestTest.cpp  LoginRequestTest.cpp
cliService/tests/tree/: TreeTest.cpp
cli_project/src/: CMakeLists.txt  common.hpp  main.cpp
cli_project/src/cli/: CLIService.cpp  CLIService.hpp  CLIServiceConfiguration.hpp
cli_project/src/command/: Command.hpp  CommandRequest.cpp  CommandRequest.hpp  GetAnalyticsCommand.cpp  GetAnalyticsCommand.hpp  PotmeterCommand.cpp  PotmeterCommand.hpp  RgbLedCommand.cpp  RgbLedCommand.hpp
cli_project/src/commands/: GetAnalyticsCommand.hpp  PotmeterCommand.cpp  PotmeterCommand.hpp  RgbLedCommand.cpp  RgbLedCommand.hpp
cli_project/src/factory/: CommandMenuTreeFactory.cpp  CommandMenuTreeFactory.hpp
cli_project/src/io/: IOStreamIf.hpp  InOutStream.hpp
cli_project/src/menu/: Command.hpp  CommandMenuTree.cpp  CommandMenuTree.hpp  CommandMenuTreeFactory.cpp  CommandMenuTreeFactory.hpp  CommandRequest.cpp  CommandRequest.hpp  MenuNode.cpp  MenuNode.hpp
cli_project/src/stream/: InOutStream.hpp
cli_project/src/user/: User.hpp
code/: CMakeLists.txt
code/cliService/: CMakeLists.txt
code/cliService/include/: CliRequest.hpp
code/cliService/src/: CliRequest.cpp
code/example/: CMakeLists.txt  main.cpp
code/example/commands/: GetAnalyticsCommand.cpp  GetAnalyticsCommand.hpp  PotmeterCommand.cpp  PotmeterCommand.hpp  RgbLedCommand.cpp  RgbLedCommand.hpp
code/example/factory/: CommandMenuTreeFactory.cpp  CommandMenuTreeFactory.hpp
code/example/io/: StdIOStream.hpp
code/include/cliService/: CLIService.hpp  CLIServiceConfiguration.hpp  CommandIf.hpp  MenuItemIf.hpp  MenuNode.hpp  User.hpp
code/src/: CLIService.cpp  CMakeLists.txt  CommandMenuTree.cpp  CommandRequest.cpp  MenuNode.cpp
code/test/: CMakeLists.txt  CliRequestTest.cpp
code/tests/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/cli/: CLIService.cpp  CLIService.hpp  CLIServiceConfiguration.hpp
src/commands/: GetAnalyticsCommand.cpp  GetAnalyticsCommand.hpp  PotmeterCommand.cpp  PotmeterCommand.hpp  accessLevel.hpp
src/factory/: CommandMenuTreeFactory.cpp  CommandMenuTreeFactory.hpp
src/io/: StdIOStream.hpp
src/menu/: Command.hpp  CommandMenuTree.cpp  CommandRequest.cpp  MenuNode.cpp  MenuNode.hpp
src/user/: User.hpp
(+6 files in other folders)
