set(LIB_HEADERS
  include/cliService/cli/ActionRequest.hpp
  include/cliService/cli/CLIService.hpp
  include/cliService/cli/CLIServiceConfiguration.hpp
  include/cliService/cli/CLIState.hpp
  include/cliService/cli/CommandHistory.hpp
  include/cliService/cli/InputParser.hpp
  include/cliService/cli/LoginRequest.hpp
  include/cliService/cli/RequestBase.hpp
  include/cliService/cli/TerminalIf.hpp
  include/cliService/cli/User.hpp
  include/cliService/tree/CommandIf.hpp
  include/cliService/tree/CommandResponse.hpp
  include/cliService/tree/Directory.hpp
  include/cliService/tree/NodeIf.hpp
  include/cliService/tree/Path.hpp
  include/cliService/tree/PathCompleter.hpp
  include/cliService/tree/PathResolver.hpp
)

set(LIB_SOURCES
  src/cli/ActionRequest.cpp
  src/cli/CLIService.cpp
  src/cli/CommandHistory.cpp
  src/cli/InputParser.cpp
  src/tree/Directory.cpp
  src/tree/Path.cpp
  src/tree/PathResolver.cpp
)

add_library(${PROJECT_NAME}_lib
  ${LIB_HEADERS}
  ${LIB_SOURCES}
)

target_include_directories(${PROJECT_NAME}_lib
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
