# Uncomment and modify the following when you're ready to add tests
# find_package(GTest REQUIRED)
# include(GoogleTest)
#
# add_executable(cli_tests
#   test_main.cpp
#   # Add your test files here
# )
#
# target_link_libraries(cli_tests PRIVATE GTest::GTest GTest::Main)
# target_include_directories(cli_tests PRIVATE ${PROJECT_SOURCE_DIR}/src)
#
# gtest_discover_tests(cli_tests)
